# esp32_smart_clock

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  alarm_mgr.c  alarm_mgr.h  app_state.c  app_state.h  ck_lu9685.c  ck_lu9685.h  ck_pca9685.c  ck_pca9685.h  ck_servo_display.c  ck_servo_display.h  ck_state.c  ck_state.h  ck_time_ext.c  ck_time_ext.h  ck_wifi_time.c  ck_wifi_time.h  main.c  servo_display.c  servo_display.h  wifi_time.c  wifi_time.h
