idf_component_register(SRCS
                    "main.c"
                    "wifi_time.c"
                    "wifi_time.h"
                    "app_state.h"
                    "app_state.c"
                    "servo_display.c"
                    "servo_display.h"
                    "alarm_mgr.c"
                    "alarm_mgr.h"
        INCLUDE_DIRS ".")
