idf_component_register(SRCS
                    "ck_pca9685.c"
                    "ck_pca9685.h"
                    "ck_servo_display.c"
                    "ck_servo_display.h"
                    "ck_state.h"
                    "ck_state.c"
                    "ck_wifi_time.c"
                    "ck_wifi_time.h"
                    "main.c"
        INCLUDE_DIRS ".")
