idf_component_register(SRCS
                    "ck_lu9685.c"
                    "ck_lu9685.h"
                    "ck_servo_display.c"
                    "ck_servo_display.h"
                    "ck_state.h"
                    "ck_state.c"
                    "ck_time_ext.h"
                    "ck_time_ext.c"
                    "ck_wifi_time.c"
                    "ck_wifi_time.h"
                    "main.c"
        INCLUDE_DIRS ".")
